--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,219 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:fillViewport="true">
-
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#ffffff"
+    tools:context=".ui.MainActivity">
+    <FrameLayout
+        android:id="@+id/main_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="70dp"
+        app:layout_constraintBottom_toTopOf="@+id/nav_division"></FrameLayout>
+
+
+    <LinearLayout
+        android:id="@+id/nav_division"
+        android:background="#eeeeee"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"></LinearLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
         android:background="#ffffff"
-        tools:context=".ui.MainActivity">
-
-        <ImageView
-            android:id="@+id/main_banner"
-            android:layout_width="match_parent"
-            android:layout_height="110dp"
-            android:scaleType="centerCrop"
-            app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/img_main_banner" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_marginLeft="23dp"
-            android:layout_marginRight="23dp"
-            app:layout_constraintTop_toBottomOf="@+id/main_banner"
-            android:background="#ffffff">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/resume_button"
-                android:layout_width="match_parent"
-                android:layout_height="74dp"
-                android:background="@drawable/main_resume_button_border"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <ImageView
-                    android:id="@+id/resume_icon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:src="@drawable/ic_matching_resume" />
-
-                <TextView
-                    android:id="@+id/resume_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="18dp"
-                    android:layout_marginTop="12dp"
-                    android:fontFamily="@font/spoqahansansbold"
-                    android:includeFontPadding="false"
-                    android:textColor="#3d3d3d"
-                    android:textSize="14sp"
-                    app:layout_constraintBottom_toTopOf="@+id/resume_subtitle"
-                    app:layout_constraintStart_toEndOf="@+id/resume_icon"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:text="이력서를 업데이트 해보세요." />
-
-                <TextView
-                    android:id="@+id/resume_subtitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="18dp"
-                    android:layout_marginBottom="12dp"
-                    android:includeFontPadding="false"
-                    android:fontFamily="@font/spoqahansansregular"
-                    android:textColor="#888888"
-                    android:textSize="12sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/resume_icon"
-                    app:layout_constraintTop_toBottomOf="@+id/resume_title"
-                    android:text="키워드를 설정하시면 나에게 맞는 매칭확률 UP! " />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/keyword_title_area"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_marginTop="32dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/resume_button">
-
-                <TextView
-                    android:id="@+id/main_user_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:includeFontPadding="false"
-                    android:fontFamily="@font/spoqahansansbold"
-                    android:textColor="#3d3d3d"
-                    android:textSize="16sp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:text="이지수님" />
-
-                <TextView
-                    android:id="@+id/main_keyword_num"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:includeFontPadding="false"
-                    android:fontFamily="@font/spoqahansansbold"
-                    android:textColor="#64d9da"
-                    android:textSize="16sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:text="10명의 헤드헌터" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/spoqahansansbold"
-                    android:includeFontPadding="false"
-                    android:textColor="#3d3d3d"
-                    android:textSize="16sp"
-                    app:layout_constraintStart_toEndOf="@+id/main_keyword_num"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:text="와 키워드 매칭되었어요." />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/keyword_hunter_lists"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="8dp"
-                android:listSelector="@android:color/transparent"
-                android:background="#ffffff"
-                app:layout_constraintTop_toBottomOf="@+id/keyword_title_area"/>
-
-            <TextView
-                android:id="@+id/all_keyword_hunter_button"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginTop="17dp"
-                android:includeFontPadding="false"
-                android:gravity="center"
-                android:singleLine="true"
-                android:fontFamily="@font/spoqahansansbold"
-                android:textColor="#ffffff"
-                android:textSize="14sp"
-                android:background="@drawable/primary_buuton"
-                app:layout_constraintTop_toBottomOf="@+id/keyword_hunter_lists"
-                android:text="전체보기" />
-
-            <TextView
-                android:id="@+id/main_second_hunter_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:includeFontPadding="false"
-                android:fontFamily="@font/spoqahansansbold"
-                android:textColor="#3d3d3d"
-                android:textSize="16sp"
-                app:layout_constraintTop_toBottomOf="@+id/all_keyword_hunter_button"
-                app:layout_constraintStart_toStartOf="parent"
-                android:text="인기 헌터" />
-
-            <TextView
-                android:id="@+id/main_second_hunter_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="34dp"
-                android:includeFontPadding="false"
-                android:fontFamily="@font/spoqahansansbold"
-                android:textColor="#64d9da"
-                android:textSize="14sp"
-                app:layout_constraintTop_toBottomOf="@+id/all_keyword_hunter_button"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:text="더보기" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/second_hunter_lists"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="6dp"
-                android:listSelector="@android:color/transparent"
-                android:background="#ffffff"
-                app:layout_constraintTop_toBottomOf="@+id/main_second_hunter_title"/>
-
-            <TextView
-                android:id="@+id/main_third_hunter_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:includeFontPadding="false"
-                android:fontFamily="@font/spoqahansansbold"
-                android:textColor="#3d3d3d"
-                android:textSize="16sp"
-                app:layout_constraintTop_toBottomOf="@+id/second_hunter_lists"
-                app:layout_constraintStart_toStartOf="parent"
-                android:text="리뷰 많은 헌터" />
-
-            <androidx.viewpager.widget.ViewPager
-                android:id="@+id/card_view_pager"
-                android:layout_width="match_parent"
-                android:layout_height="206dp"
-                android:layout_marginBottom="25dp"
-                android:clipToPadding="false"
-                android:overScrollMode="never"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/main_third_hunter_title"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</ScrollView>
+        app:labelVisibilityMode="labeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:itemIconSize="40dp"
+        app:itemIconTint="@drawable/selector_navigation_bar"
+        app:itemTextColor="@drawable/selector_navigation_bar"
+        app:menu="@menu/bottom_navigation_main"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
