프로필 진행중

--- a/app/src/main/res/layout/activity_main_tmp.xml
+++ b/app/src/main/res/layout/activity_main_tmp.xml
@@ -149,7 +149,7 @@
                 android:fontFamily="@font/spoqahansansbold"
                 android:textColor="#ffffff"
                 android:textSize="14sp"
-                android:background="@drawable/primary_buuton"
+                android:background="@drawable/primary_button"
                 app:layout_constraintTop_toBottomOf="@+id/keyword_hunter_lists"
                 android:text="전체보기" />
 
